syntax = "proto3";

package holms.types.booking.reservations;
option csharp_namespace = "HOLMS.Types.Booking.Reservations";
option go_package = "booking/reservations";

import "booking/indicators/reservation_indicator.proto";
import "booking/indicators/reservation_note_indicator.proto";
import "operations/note_requests/note_request_indicator.proto";
import "operations/note_requests/note_category.proto";
import "primitive/pb_local_date.proto";
import "supply/incidental_items/incidental_item_indicator.proto";
import "booking/indicators/incidental_item_reservation_indicator.proto";

message ReservationNote {
	.holms.types.booking.indicators.ReservationNoteIndicator entity_id = 1;
	.holms.types.operations.note_requests.NoteRequestIndicator source_note = 2;
	.holms.types.operations.note_requests.NoteCategory category = 3;
	string additional_note = 4;
	bool include_on_confirmation = 5;
	.holms.types.booking.indicators.ReservationIndicator lodging_reservation = 6;
	string source_note_subject = 7;
	bool is_fulfilled = 8;
	bool permanent_on_guest_record = 9;
        .holms.types.supply.incidental_items.IncidentalItemIndicator incidental_item_id = 10;
	.holms.types.primitive.PbLocalDate inc_start_date =11;
       .holms.types.primitive.PbLocalDate inc_end_date =12;
}

